--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "slug": "recipeApp",
     "version": "1.0.0",
     "orientation": "portrait",
+    "backgroundColor": "#f3e8e8ff",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
